--- a/hbd/src/pages/index.astro
+++ b/hbd/src/pages/index.astro
@@ -1,140 +1,157 @@
 ---
-
+import "../styles/index.css";
 ---
 
-<body>
-  <div class="container">
-    <div class="one">
-      <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
-      </h1>
-      <p class="two" data-node-name="greetingText">
-        I really like your name btw!
-      </p>
-    </div>
-    <div class="three">
-      <p data-node-name="text1">It's your birthday!!! :D</p>
-    </div>
-    <div class="four">
-      <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">
-          Happy birthday to you!! Yeee! Many many happy blah...
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HBD GOWUNA</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="one">
+        <h1 class="one">
+          <span data-node-name="greeting">Hey</span>
+          <span data-node-name="name">Lydia</span>
+        </h1>
+        <p class="two" data-node-name="greetingText">
+          I really like your name btw!
         </p>
-        <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
+      </div>
+      <div class="three">
+        <p data-node-name="text1">It's your birthday!!! :D</p>
+      </div>
+      <div class="four">
+        <div class="text-box">
+          <p class="hbd-chatbox" data-node-name="textInChatBox">
+            Happy birthday to you!! Yeee! Many many happy blah...
+          </p>
+          <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
+        </div>
+      </div>
+      <div class="five">
+        <p class="idea-1" data-node-name="text2">
+          That's what I was going to do.
+        </p>
+        <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+        <p class="idea-3">
+          <span data-node-name="text4"
+            >I realised, I wanted to do something</span
+          >
+          <strong data-node-name="text4Adjective">special</strong>.
+        </p>
+        <p class="idea-4" data-node-name="text5Entry">Because,</p>
+        <p class="idea-5">
+          <span data-node-name="text5Content">You are Special</span>
+          <span class="smiley" data-node-name="smiley">:)</span>
+        </p>
+        <p class="idea-6">
+          <span data-node-name="bigTextPart1">S</span>
+          <span data-node-name="bigTextPart2">O</span>
+        </p>
+      </div>
+      <div class="six">
+        <img
+          src="img/lydia2.png"
+          alt=""
+          class="lydia-dp"
+          data-node-name="imagePath"
+        />
+        <img src="img/hat.svg" alt="" class="hat" />
+        <div class="wish">
+          <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
+          <h5 data-node-name="wishText">
+            May the js.prototypes always be with you! ;)
+          </h5>
+        </div>
+      </div>
+      <div class="seven">
+        <div class="baloons">
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon2.svg" alt="" />
+          <img src="img/ballon1.svg" alt="" />
+          <img src="img/ballon3.svg" alt="" />
+        </div>
+      </div>
+      <div class="eight">
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20" cy="20" r="20"></circle>
+        </svg>
+      </div>
+      <div class="nine">
+        <p data-node-name="outroText">
+          Okay, now come back and tell me if you liked it.
+        </p>
+        <p id="replay" data-node-name="replayText">
+          Or click, if you want to watch it again.
+        </p>
+        <p class="last-smile" data-node-name="outroSmiley">:)</p>
+        <p class="msgp" data-node-name="msgp">:)</p>
+        <img
+          src="img/tako.png"
+          alt=""
+          class="tako-dp"
+          data-node-name="takoImage"
+        />
       </div>
     </div>
-    <div class="five">
-      <p class="idea-1" data-node-name="text2">
-        That's what I was going to do.
-      </p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
-      <p class="idea-3">
-        <span data-node-name="text4">I realised, I wanted to do something</span>
-        <strong data-node-name="text4Adjective">special</strong>.
-      </p>
-      <p class="idea-4" data-node-name="text5Entry">Because,</p>
-      <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
-        <span class="smiley" data-node-name="smiley">:)</span>
-      </p>
-      <p class="idea-6">
-        <span data-node-name="bigTextPart1">S</span>
-        <span data-node-name="bigTextPart2">O</span>
-      </p>
-    </div>
-    <div class="six">
-      <img
-        src="img/lydia2.png"
-        alt=""
-        class="lydia-dp"
-        data-node-name="imagePath"
-      />
-      <img src="img/hat.svg" alt="" class="hat" />
-      <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">
-          May the js.prototypes always be with you! ;)
-        </h5>
-      </div>
-    </div>
-    <div class="seven">
-      <div class="baloons">
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-      </div>
-    </div>
-    <div class="eight">
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20"></circle>
-      </svg>
-    </div>
-    <div class="nine">
-      <p data-node-name="outroText">
-        Okay, now come back and tell me if you liked it.
-      </p>
-      <p id="replay" data-node-name="replayText">
-        Or click, if you want to watch it again.
-      </p>
-      <p class="last-smile" data-node-name="outroSmiley">:)</p>
-    </div>
-  </div>
-</body>
+  </body>
+</html>
 
 <script
   is:inline
@@ -145,25 +162,27 @@
   const obj = {
     greeting: "პრივეტ",
     name: "გოწი",
-    greetingText: "გაკოცე ტაკოზე btw...",
-    wishText: "გილოცავ და გისურვებ ყველაფერ საუკეთესოს!!!",
+    greetingText: "გაკოცე ტაკოზე BTW...",
+    wishText: "გისურვებ ყველაფერ საუკეთესოს ჩემთან ერთად",
     imagePath: "img/lydia2.png",
-    text1: "რა ლამაზი დღეა",
+    text1: "რა ლამაზი დღეა &#x1f973;",
     textInChatBox: "შესანიშნავი უდავოდ ?!",
     sendButtonLabel: "ფშუხ გავაგზავნოთ",
     text2: "ამას ვაპირებდი...",
-    text3: "მაგრამ...",
+    text3: "მაგრამ &#9995;",
     text4: "მინდოდა რაიმე",
     text4Adjective: "განსაკუთრებული გამეკეთებინა",
     text5Entry: "რადგან",
-    text5Content: "შენც განსაკუთრებული ხარ !",
+    text5Content: "შენც განსაკუთრებული ხარ &#128150;",
     smiley: ":)",
     bigTextPart1: "ამი",
     bigTextPart2: "ტომ",
-    wishHeading: "დაბადების დღეს გილოცავ სიცოცხლე <3",
-    outroText: "კაი ქშ გააჯვი ახლა",
+    wishHeading: "#დაბადების დღეს გილოცავ სიცოცხლევ",
+    outroText: "კაი ქშ დაიბანე ახლა",
     replayText: "ან თავიდან უყურე რავიცი რავიცი...",
     outroSmiley: ":)",
+    takoImage: "img/tako.png",
+    msgp: "ამასთან ვწევარ სხვათაშორის"
   };
 
   // Animation Timeline
@@ -239,8 +258,8 @@
         },
         "+=2",
       )
-      .from(".four", 0.7, {
-        scale: 0.2,
+      .from(".four", 0.5, {
+        scale: 0.1,
         opacity: 0,
       })
       .from(".fake-btn", 0.3, {
@@ -260,9 +279,9 @@
       })
       .to(
         ".four",
-        0.5,
+        0.3,
         {
-          scale: 0.2,
+          scale: 0.1,
           opacity: 0,
           y: -150,
         },
@@ -276,7 +295,8 @@
       .to(".idea-3 strong", 0.5, {
         scale: 1.2,
         x: 10,
-        backgroundColor: "rgb(21, 161, 237)",
+        background:
+          "linear-gradient(to right, rgb(21, 161, 237), red, orange, yellow, green, blue, indigo, violet)",
         color: "#fff",
       })
       .to(".idea-3", 0.7, ideaTextTransLeave, "+=1.5")
@@ -362,8 +382,8 @@
         "-=2",
       )
       .from(".hat", 0.5, {
-        x: -100,
-        y: 350,
+        x: -120,
+        y: 150,
         rotation: -180,
         opacity: 0,
       })
@@ -373,7 +393,7 @@
         {
           opacity: 0,
           y: -50,
-          // scale: 0.3,
+          scale: 0.3,
           rotation: 150,
           skewX: "30deg",
           ease: Elastic.easeOut.config(1, 0.5),
@@ -384,11 +404,9 @@
         ".wish-hbd span",
         0.7,
         {
-          scale: 1.4,
           rotationY: 150,
         },
         {
-          scale: 1,
           rotationY: 0,
           color: "#ff69b4",
           ease: Expo.easeOut,
@@ -413,7 +431,7 @@
           visibility: "visible",
           opacity: 0,
           scale: 80,
-          repeat: 3,
+          repeat: 4,
           repeatDelay: 1.4,
         },
         0.3,
@@ -431,6 +449,25 @@
           rotation: 90,
         },
         "+=1",
+      )
+      .staggerFrom(".last-smile", 1, {scale: 1}, 1.2)
+      .to(
+        ".msgp",
+        0.5,
+        {
+          scale: 1.5
+        },
+        "+=1",
+      )
+      .from(
+        ".tako-dp",
+        0.5,
+        {
+          opacity: 0,
+          x: 25,
+          y: -25,
+        },
+        "-=2",
       );
 
     const replyBtn = document.getElementById("replay");
@@ -442,12 +479,12 @@
   const dataArr = Object.keys(obj);
   dataArr.forEach((customData, index) => {
     if (obj[customData] !== "") {
-      if (customData === "imagePath") {
+      if (customData === "imagePath" || customData === "takoImage") {
         document
           .querySelector(`[data-node-name*="${customData}"]`)
           .setAttribute("src", obj[customData]);
       } else {
-        document.querySelector(`[data-node-name*="${customData}"]`).innerText =
+        document.querySelector(`[data-node-name*="${customData}"]`).innerHTML =
           obj[customData];
       }
     }
@@ -457,305 +494,3 @@
     }
   });
 </script>
-
-<style>
-  html {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-    font-family: "Work Sans", sans-serif;
-  }
-
-  .container {
-    height: 100vh;
-    width: 100vh;
-    margin: 0 auto;
-    text-align: center;
-    visibility: hidden;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .container div.six {
-    top: 10vh;
-    z-index: 1;
-  }
-
-  .container div.seven,
-  .container div.eight {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-  }
-
-  .container > div {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 20vh;
-  }
-
-  .one {
-    font-size: 4.5rem;
-  }
-
-  .one > img {
-    vertical-align: middle;
-    margin-bottom: 10px;
-    max-width: 100%;
-    height: auto;
-  }
-
-  .two {
-    font-size: 1.2rem;
-    font-weight: lighter;
-  }
-
-  .three {
-    font-size: 3rem;
-  }
-
-  .four .text-box {
-    width: 600px;
-    margin: 0 auto;
-    border: 3px solid #aaa;
-    border-radius: 5px;
-    padding: 10px;
-    position: relative;
-  }
-
-  .text-box p {
-    margin: 0;
-    text-align: left;
-  }
-
-  .text-box span {
-    visibility: hidden;
-  }
-
-  .text-box .fake-btn {
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    color: #fff;
-    background-color: rgb(21, 161, 237);
-    padding: 5px 8px;
-    border-radius: 3px;
-  }
-
-  .five p {
-    font-size: 2rem;
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
-
-  .idea-3 strong {
-    padding: 3px 5px;
-    border-radius: 3px;
-    display: inline-block;
-  }
-
-  .five .idea-5 {
-    font-size: 4rem;
-  }
-
-  .idea-5 span,
-  .idea-6 span,
-  .wish-hbd span {
-    display: inline-block;
-  }
-
-  .idea-6 span {
-    font-size: 15rem;
-  }
-
-  .six {
-    position: relative;
-  }
-
-  .six img {
-    display: inline-block;
-    max-width: 100%;
-    height: auto;
-  }
-
-  .six .hat {
-    position: absolute;
-    width: 80px;
-    top: -35px;
-    left: 41.5%;
-    /* transform: scale(0.1); */
-  }
-
-  .baloons img {
-    display: inline-block;
-    position: absolute;
-  }
-
-  .baloons img:nth-child(even) {
-    left: -10%;
-  }
-
-  .baloons img:nth-child(odd) {
-    right: -10%;
-  }
-
-  .baloons img:nth-child(3n + 0) {
-    left: 30%;
-  }
-
-  .eight svg {
-    width: 25px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    visibility: hidden;
-    z-index: -1;
-  }
-
-  .eight svg:nth-child(1) {
-    top: 7vh;
-    left: 5vw;
-    fill: #bd6ecf;
-  }
-
-  .eight svg:nth-child(2) {
-    top: 23vh;
-    left: 35vw;
-    fill: #7dd175;
-  }
-
-  .eight svg:nth-child(3) {
-    top: 33vh;
-    left: 23vw;
-    fill: #349d8b;
-  }
-
-  .eight svg:nth-child(4) {
-    top: 43vh;
-    left: 57vw;
-    fill: #347a9d;
-  }
-
-  .eight svg:nth-child(5) {
-    top: 68vh;
-    left: 7vw;
-    fill: #c66053;
-  }
-
-  .eight svg:nth-child(6) {
-    top: 42vh;
-    left: 77vw;
-    fill: #bfaa40;
-  }
-
-  .eight svg:nth-child(7) {
-    top: 68vh;
-    left: 83vw;
-    fill: #e3bae8;
-  }
-
-  .eight svg:nth-child(8) {
-    top: 86vh;
-    left: 37vw;
-    fill: #8762cb;
-  }
-
-  .eight svg:nth-child(9) {
-    top: 94vh;
-    left: 87vw;
-    fill: #9a90da;
-  }
-
-  .wish-hbd {
-    font-size: 3em;
-    margin: 0;
-    text-transform: uppercase;
-  }
-
-  .wish h5 {
-    font-weight: lighter;
-    font-size: 2rem;
-    margin: 10px 0 0;
-  }
-
-  .nine p {
-    font-size: 2rem;
-    font-weight: lighter;
-  }
-
-  #replay {
-    z-index: 3;
-    cursor: pointer;
-  }
-
-  /* Media Queries */
-  @media screen and (max-height: 1000px) {
-    .six .hat {
-      left: 40%;
-    }
-  }
-
-  @media screen and (max-height: 800px) {
-    .six .hat {
-      left: 37%;
-    }
-  }
-
-  @media screen and (max-height: 700px) {
-    .six .hat {
-      left: 32%;
-    }
-  }
-
-  @media screen and (max-height: 850px) and (max-width: 450px) {
-    .six .hat {
-      left: 32%;
-    }
-  }
-
-  @media screen and (max-width: 500px) {
-    .container {
-      width: 90%;
-    }
-
-    .four .text-box {
-      width: 90%;
-    }
-
-    .text-box .fake-btn {
-      right: 5px;
-      bottom: -38px;
-    }
-
-    .idea-5 span {
-      display: block;
-    }
-
-    .idea-6 span {
-      font-size: 10rem;
-    }
-
-    .six .hat {
-      width: 50px;
-      top: -20px;
-    }
-
-    .wish-hbd {
-      font-size: 2.2em;
-    }
-
-    .wish h5 {
-      font-size: 1.4rem;
-    }
-
-    .nine p {
-      font-size: 1.5rem;
-      font-weight: lighter;
-    }
-  }
-</style>
